moved images to new file and adjusted html to match

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<span>Create an account</span>
 		</div>
 	</div>
-	<img id="Hangman_Img" src="hangman.png" srcset="hangman.png 1x, hangman@2x.png 2x">
+	<img id="Hangman_Img" src="images/hangman.png" srcset="images/hangman.png 1x, images/hangman@2x.png 2x">
 		
 </div>
 </body>
