--- a/main_game.html
+++ b/main_game.html
@@ -338,7 +338,7 @@
 	<div id="Game_Title">
 		<span>Hangman</span>
 	</div>
-	<img id="Hangman_Img" src="hangman.png" srcset="hangman.png 1x, hangman@2x.png 2x">
+	<img id="Hangman_Img" src="images/hangman.png" srcset="images/hangman.png 1x, images/hangman@2x.png 2x">
 		
 	<div id="Account_Settings_Button">
 		<svg class="Account_Settings_Background">
