--- a/new_game.html
+++ b/new_game.html
@@ -12,7 +12,7 @@
 	<div id="Game_Title">
 		<span>Hangman</span>
 	</div>
-	<img id="hangman" src="hangman.png" srcset="hangman.png 1x, hangman@2x.png 2x">
+	<img id="hangman" src="images/hangman.png" srcset="images/hangman.png 1x, images/hangman@2x.png 2x">
 	<div id="Choose_Difficulty">
 		<!-- <svg class="Difficulty_Background">
 		  <rect id="Difficulty_Background" rx="5" ry="5" x="0" y="0" width="333" height="51">
