Added basic functionality via main.html/css and game.js

--- a/main_game.html
+++ b/main_game.html
@@ -8,8 +8,10 @@
 	<title>Main Game Page</title>
 </head>
 <body>
+<script src="game.js"></script>
 <div id="Main_Game_Page">
 	<div id="Hanger">
+		<!--<img src="./images/Base.png">-->
 		<svg class="Hanger_Line" viewBox="0 0 394 5">
 			<path id="Hanger_Line_1" d="M 0 0 L 394 0">
 			</path>
@@ -363,6 +365,9 @@
 	</div>
 	<div id="Losses">
 		<span>Losses: 3</span>
+	</div>
+	<div id="Lives">
+		<span>Lives: </span><span id="lives_val"></span>
 	</div>
 </div>
 </body>
