Fixed win/loss counter

--- a/main.html
+++ b/main.html
@@ -17,7 +17,8 @@
           <p>&emsp;Wrong Guesses: <span id='mistakes'>0</span> of <span id='maxWrong'></span></p>
         </div>
         <div class="game_count">
-            <p>&emsp;&emsp;Win: <span class="Wins">0</span> &emsp;Losses: <span class="Losses">0</span></p>
+            <!--<p>&emsp;&emsp;Win: <span id="Wins"><p id="win_tot">0</p></span> &emsp;Losses: <span class="Losses"><p id="loss_tot">0</p></span></p>-->
+            <p>&emsp;&emsp;Win: <span id="win_tot">0</span>&emsp; Losses: <span id="loss_tot">0</span></p>
         </div> 
     </div>
   <div class="text-center">
