--- a/new_game_page.html
+++ b/new_game_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="new_game_page_stylesheet.css" />
-    <title>Account Settings</title>
+    <title>New Game</title>
   </head>
   <body>
     <div id="Profile_Edit_Page">
