--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 						<h2 id="Create_Account_Header">Create an Account</h2>
 						<div id="Email" class="Input_Div">
 							<label id="Email_" for="email">Email</label><br>
-							<input type="email" class="Email_Input" name="email" id="email" placeholder="Email">
+							<input type="email" class="Email_Input" name="email" id="email" placeholder="Email" required>
 						</div>
 						<div id="Username" class="Input_Div">
 							<label id="Username_" for="user">Username</label><br>
-							<input type="text" class="Username_Input" name="user" id="user" placeholder="Username">
+							<input type="text" class="Username_Input" name="user" id="user" placeholder="Username" required>
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_" for="pass">Password</label><br>
 							<input type="password" class="Password_Input" name="pass" id="pass"
-								placeholder="Password">
+								placeholder="Password" required>
 						</div>
 						<div id="Retype_Password" class="Input_Div">
 							<label id="Re-type_Password" for="pass_retype">Re-type Password</label><br>
 							<input type="password" class="Re-type_Password_Input" name="pass_retype" id="pass_retype"
-								placeholder="Password">
+								placeholder="Password" required>
 						</div>
 						<button id="Create_Account_Button">Create Account</button>
 					</form>
@@ -52,11 +52,11 @@
 						<div id="EmailUsername" class="Input_Div">
 							<label id="EmailUsername_Title" for="emailusername_input">Email/Username</label><br>
 							<input type="text" class="EmailUserName_Input" name="emailusername_input"
-								placeholder="Email/Username">
+								placeholder="Email/Username" required>
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_Title" for="password_input_a">Password</label><br>
-							<input type="text" id="Password_Input_a" name="password_input_a" placeholder="Password">
+							<input type="text" id="Password_Input_a" name="password_input_a" placeholder="Password" required>
 						</div>
 						<button id="Log_In_Button">Log In</button>
 					</form>
