--- a/index.html
+++ b/index.html
@@ -11,53 +11,6 @@
 </head>
 
 <body>
-<<<<<<< Updated upstream
-	<div id="Log-in_Page">
-		<div id="Right_Panel">
-			<svg class="Right_Panel_Background">
-				<rect id="Right_Panel_Background" rx="0" ry="0" x="0" y="0" width="959" height="1081">
-				</rect>
-			</svg>
-			<div id="Log_In_Box">
-				<svg class="Log_In_Background">
-					<rect id="Log_In_Background" rx="33" ry="33" x="0" y="0" width="698" height="533">
-					</rect>
-				</svg>
-				<div onclick="new_game.html" id="Log_In_Button">
-					<svg class="Log_In_Button_Background">
-						<rect id="Log_In_Button_Background" rx="13" ry="13" x="0" y="0" width="564" height="53">
-						</rect>
-					</svg>
-					<div id="Log_In_Button_Text">
-						<span>Log In</span>
-					</div>
-				</div>
-				<div id="Password">
-					<!-- <svg class="Password_Input_a">
-					<rect id="Password_Input_a" rx="13" ry="13" x="0" y="0" width="564" height="53">
-					</rect>
-				</svg>
-				<div id="Password_Title">
-					<span>Password</span>
-				</div> -->
-					<form>
-						<label id="Password_Title" for="password_input_a">Password</label><br><br>
-						<input type="text" id="Password_Input_a" name="password_input_a" placeholder="Password">
-					</form>
-				</div>
-				<div id="EmailUsername">
-					<!-- <svg class="EmailUsername_Input">
-					<rect id="EmailUsername_Input" rx="13" ry="13" x="0" y="0" width="564" height="53">
-					</rect>
-				</svg> -->
-					<!-- <div id="EmailUsername_Title">
-					<span>Email/Username</span>
-				</div> -->
-					<form>
-						<label id="EmailUsername_Title" for="emailusername_input">Email/Username</label><br><br>
-						<input type="text" class="EmailUserName_Input" name="emailusername_input"
-							placeholder="Email/Username">
-=======
 	<section id="Log-in_Page">
 		<div id="Left_Panel">
 			<div id="Header">
@@ -78,8 +31,7 @@
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_" for="pass">Password</label><br>
-							<input type="password" class="Password_Input" name="pass" id="pass" placeholder="Password"
-								required>
+							<input type="password" class="Password_Input" name="pass" id="pass" placeholder="Password" required>
 						</div>
 						<div id="Retype_Password" class="Input_Div">
 							<label id="Re-type_Password" for="pass_retype">Re-type Password</label><br>
@@ -87,58 +39,11 @@
 								placeholder="Password" required>
 						</div>
 						<button type="submit" id="Create_Account_Button">Create Account</button>
->>>>>>> Stashed changes
 					</form>
 				</div>
-				<div id="Log_In_Section_Title">
-					<span>Log In</span>
-				</div>
 			</div>
+			<br><br>
 		</div>
-<<<<<<< Updated upstream
-		<div id="Game_Title">
-			<span>Hangman</span>
-		</div>
-		<div id="Create_Account">
-			<form id="signupForm">
-				<div id="Create_Account_Button">
-				<!-- <div onclick="new_game.html" id="Create_Account_Button"> -->
-					<!-- <svg class="Create_Account_Background"> -->
-						<!-- <rect id="Create_Account_Background" rx="13" ry="13" x="0" y="0" width="564" height="53"> -->
-						<!-- </rect> -->
-					<!-- </svg> -->
-					<div id="Create_Account_Text">
-						<!-- added in for testing purposes, will need to edit later -->
-						<input type="submit" value="Create Account">
-						<!-- <span>Create Account</span> -->
-					</div>
-				</div>
-
-				<!-- form tags and form id needed for database interactions -->
-				<div id="Retype_Password">
-					<!-- <svg class="Re-type_Password_Input">
-				<rect id="Re-type_Password_Input" rx="13" ry="13" x="0" y="0" width="564" height="53">
-				</rect>
-			</svg>
-			<div id="Re-type_Password">
-				<span>Re-type Password</span>
-			</div> -->
-					<label id="Re-type_Password" for="pass_retype">Re-type Password</label><br><br>
-					<input type="password" class="Re-type_Password_Input" name="pass_retype" id="pass_retype"
-						placeholder="Password">
-				</div>
-				<div id="Password">
-					<!-- <svg class="Password_Input">
-				<rect id="Password_Input" rx="13" ry="13" x="0" y="0" width="564" height="53">
-				</rect>
-			</svg>
-			<div id="Password_">
-				<span>Password</span>
-			</div> -->
-					<label id="Password_" for="pass">Password</label><br><br>
-					<input type="password" class="Password_Input" name="pass" id="pass"
-						placeholder="Password">
-=======
 		<div id="Right_Panel">
 			<div class="container">
 				<div id="Log_In">
@@ -151,48 +56,14 @@
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_Title" for="loginPass">Password</label><br>
-							<input type="password" id="loginPass" name="loginPass" placeholder="Password"
-								required>
+							<input type="password" id="loginPass" name="loginPass" placeholder="Password" required>
 						</div>
 						<button type="submit" id="Log_In_Button">Log In</button>
 					</form>
->>>>>>> Stashed changes
 				</div>
-				<div id="Username">
-					<!-- <svg class="Username_Input">
-				<rect id="Username_Input" rx="13" ry="13" x="0" y="0" width="564" height="53">
-				</rect>
-			</svg>
-			<div id="Username_">
-				<span>Username</span>
-			</div> -->
-					<label id="Username_" for="user">Username</label><br><br>
-					<input type="text" class="Username_Input" name="user" id="user" placeholder="Username">
-				</div>
-				<div id="Email">
-					<!-- <svg class="Email_Input">
-				<rect id="Email_Input" rx="13" ry="13" x="0" y="0" width="564" height="53">
-				</rect>
-			</svg>
-			<div id="Email_">
-				<span>Email</span>
-			</div> -->
-					<label id="Email_" for="email">Email</label><br><br>
-					<input type="email" class="Email_Input" name="email" id="email" placeholder="Email">
-				</div>
-			</form>
-
-			<div id="Create_an_account">
-				<span>Create an account</span>
 			</div>
+			<br><br>
 		</div>
-<<<<<<< Updated upstream
-		<img id="Hangman_Img" src="images/hangman.png" srcset="images/hangman.png 1x, images/hangman@2x.png 2x">
-
-	</div>
-=======
 		</div>
->>>>>>> Stashed changes
 </body>
-
 </html>
