index.html changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_" for="pass">Password</label><br>
-							<input type="password" class="Password_Input" name="pass" id="pass" placeholder="Password" required>
+							<input type="password" class="Password_Input" name="pass" id="pass"
+								placeholder="Password" required>
 						</div>
 						<div id="Retype_Password" class="Input_Div">
 							<label id="Re-type_Password" for="pass_retype">Re-type Password</label><br>
@@ -50,13 +51,13 @@
 					<form id="loginForm" action="">
 						<h2 id="Log_In_Header">Log In</h2>
 						<div id="EmailUsername" class="Input_Div">
-							<label id="EmailUsername_Title" for="loginUser">Email/Username</label><br>
-							<input type="text" class="EmailUserName_Input" id="loginUser" name="loginUser"
+							<label id="EmailUsername_Title" for="loginUser">Username</label><br>
+							<input type="text" class="EmailUserName_Input" name="loginUser" id="loginUser"
 								placeholder="Email/Username" required>
 						</div>
 						<div id="Password" class="Input_Div">
-							<label id="Password_Title" for="loginPass">Password</label><br>
-							<input type="password" id="loginPass" name="loginPass" placeholder="Password" required>
+							<label id="Password_Title" for="passUser">Password</label><br>
+							<input type="text" id="passUser" name="passUser" placeholder="Password" required>
 						</div>
 						<button type="submit" id="Log_In_Button">Log In</button>
 					</form>
@@ -64,6 +65,7 @@
 			</div>
 			<br><br>
 		</div>
-		</div>
+	</div>
 </body>
+
 </html>
