--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div id="EmailUsername" class="Input_Div">
 							<label id="EmailUsername_Title" for="loginUser">Username</label><br>
 							<input type="text" class="EmailUserName_Input" name="loginUser" id="loginUser"
-								placeholder="Email/Username" required>
+								placeholder="Username" required>
 						</div>
 						<div id="Password" class="Input_Div">
 							<label id="Password_Title" for="passUser">Password</label><br>
