--- a/profile_edit.html
+++ b/profile_edit.html
@@ -54,11 +54,11 @@
       </div>
 
       <div id="abcd123_Text">
-        <span>abcd123</span>
+        <span>Comp126</span>
       </div>
 
       <div id="password123_Text">
-        <span>password123</span>
+        <span>WebDev123</span>
       </div>
 
       <div id="Wins_Amount_Text">
