Added integration between main_game and new_game

--- a/main_game.html
+++ b/main_game.html
@@ -25,9 +25,12 @@
         <p>&emsp;&emsp;Win: <span id="win_tot">0</span>&emsp; Losses: <span id="loss_tot">0</span></p>
     </div> 
     <img id='hangmanPic' src="./images/0.png" alt="">
-    <p id="wordSpotlight">The word to be guessed goes here</p>
+    <p id="wordSpotlight">The word to be guessed goes here</p><br><br>
     <div id="keyboard"></div><br>
   </div> 
+  <div class="reset">
+    <button id="reset_btn" onclick="reset()" disabled>Reset</button>
+  </div>
 </div>
 <script src='./game_function.js'></script>
 </body>
