--- a/profile_edit.html
+++ b/profile_edit.html
@@ -37,6 +37,13 @@
         <span>Password</span>
       </div>
 
+      <div id="Email_Text">
+        <span>Email</span>
+      </div>
+
+      <div id="comp126_Text">
+        <span>comp426@unc.edu</span>
+      </div>
       <div id="Wins_Text">
         <span>Wins</span>
       </div>
@@ -54,7 +61,7 @@
       </div>
 
       <div id="abcd123_Text">
-        <span>Comp126</span>
+        <span>Comp426</span>
       </div>
 
       <div id="password123_Text">
@@ -85,6 +92,9 @@
         <span>change password</span>
       </div>
 
+      <div id="Change_Email_Text">
+        <span>change email</span>
+      </div>
       <div id="Save_Button">
         <svg class="Save_Button_Background">
           <rect
